--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 
-    implementation 'com.github.jlbabilino:json:v0.1.3'
+    implementation 'com.github.jlbabilino:json:master-SNAPSHOT'
 }
 
 application {
