--- a/app/src/main/resources/org/team2363/helixnavigator/global/field_configuration_2.json
+++ b/app/src/main/resources/org/team2363/helixnavigator/global/field_configuration_2.json
@@ -1,6 +1,6 @@
 {
 	"field_image": {
-        "default": "2020: Infinite Recharge"
+        "default": "2022: Rapid React"
     },
     "obstacles": []
 }
