--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ plugins {
     id 'edu.sc.seis.launch4j' version '2.5.1'
 }
 
+version = '0.0.0'
+
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
@@ -31,7 +33,8 @@ javafx {
 
 launch4j {
     mainClassName = 'org.team2363.helixnavigator.Main'
-    outfile = 'hn.exe'
-    bundledJrePath = "C:\\Program Files\\Java\\jdk-17.0.2\\bin"
+    version = project.version
+    outfile = 'HelixNavigator_' + version + '.exe'
+    bundledJrePath = 'C:\\Program Files\\Java\\jdk-17.0.2\\bin'
     jarTask = project.tasks.shadowJar
 }
