--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     implementation 'com.github.jlbabilino:json:master-SNAPSHOT'
+    implementation 'javax.measure:unit-api:2.1.3'
 }
 
 application {
