--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,18 @@ mainClassName = 'org.team2363.helixnavigator.Main'
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
+    maven { url 'https://djunits.org/maven' }
 }
 
 dependencies {
     implementation 'com.github.jlbabilino:json:master-SNAPSHOT'
-    implementation 'javax.measure:unit-api:2.1.3'
+    // implementation 'javax.measure:unit-api:2.1.3'
+    // implementation 'tec.units:unit-ri:1.0.3'
+    // implementation 'tech.units:indriya:2.1.3'
+    // implementation 'systems.uom:systems-unicode:2.1'
+    // implementation 'systems.uom:systems-common:2.1'
+    // implementation 'systems.uom:systems-quantity:2.1'
+    implementation 'org.djunits:djunits:4.01.07'
 }
 
 application {
