--- a/build.gradle
+++ b/build.gradle
@@ -26,15 +26,15 @@ dependencies {
     implementation 'com.github.jlbabilino:json:master-SNAPSHOT'
     // implementation 'javax.measure:unit-api:2.1.3'
     // implementation 'tec.units:unit-ri:1.0.3'
-    // implementation 'tech.units:indriya:2.1.3'
-    // implementation 'systems.uom:systems-unicode:2.1'
-    // implementation 'systems.uom:systems-common:2.1'
-    // implementation 'systems.uom:systems-quantity:2.1'
-    implementation 'org.djunits:djunits:4.01.07'
+    implementation 'tech.units:indriya:2.1.3'
+    implementation 'systems.uom:systems-unicode:2.1'
+    implementation 'systems.uom:systems-common:2.1'
+    implementation 'systems.uom:systems-quantity:2.1'
+    // implementation 'org.djunits:djunits:4.01.07'
 }
 
 application {
-    mainModule = 'org.team2363.helixnavigator'
+    // mainModule = 'org.team2363.helixnavigator'
     mainClass = mainClassName
 }
 
