helix trajectory native api calls

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@
 
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'edu.sc.seis.launch4j' version '2.5.1'
 }
@@ -31,6 +31,8 @@ dependencies {
     implementation 'systems.uom:systems-common:2.1'
     implementation 'systems.uom:systems-quantity:2.1'
     // implementation 'org.djunits:djunits:4.01.07'
+
+    implementation(files("libs/jar/javaapi.jar"))
 }
 
 application {
@@ -39,7 +41,7 @@ application {
 }
 
 javafx {
-    version = "17"
+    version = "18"
     modules = [ 'javafx.controls' ]
 }
 
