--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'systems.uom:systems-quantity:2.1'
     // implementation 'org.djunits:djunits:4.01.07'
 
-    implementation(files("libs/jar/javaapi.jar"))
+    implementation(files("libs/jar/helixtrajectoryj.jar"))
 }
 
 application {
@@ -66,16 +66,20 @@ task createDmg {
         def jarDir = "${buildDir}/libs"
         def jarName = "${packageName}.jar"
         def jarFile = "${buildDir}/libs/${jarName}"
+        def javaOptions = "-Djava.library.path=\$APPDIR"
+        def javaMainClass = "java"
         def dest = "${buildDir}/package"
         def iconFile = "${buildDir}/resources/main/icon.icns"
         project.exec {
             commandLine('jpackage',
                     '--input', jarDir,
+                    '--java-options', javaOptions,
                     '--main-jar', jarName,
+                    // '--main-class', 'org.team2363.helixnavigator.Main',
                     '--dest', dest,
                     '--name', project.name,
                     '--type', 'dmg',
-                    '--icon', iconFile
+                    '--icon', iconFile,
                     )
         }
     }
