--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: '1.0.0'
         type: string
+      commit:
+        description: "Commit Ref"
+        required: true
+        type: string
 
 jobs:
   build:
@@ -56,6 +60,7 @@ jobs:
           path: app/build/package
 
   release:
+    needs: build
     name: Release
     runs-on: ubuntu-22.04
 
@@ -69,6 +74,7 @@ jobs:
       - uses: ncipollo/release-action@v1
         with:
           name: v${{ inputs.version }}
+          commit: ${{ inputs.commit }}
           artifacts: "pkgs/HelixNavigator-${{ inputs.version }}.*"
           draft: true
           prerelease: true
