--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,6 @@ jobs:
         with:
           name: v${{ inputs.version }}
           tag: ${{ inputs.tag }}
-          artifacts: pkgs/HelixNavigator-1.0.0-linux-x64.deb/helixnavigator_1.0.0-1_amd64.deb,pkgs/HelixNavigator-1.0.0-macOS-x64.dmg/HelixNavigator-1.0.0.dmg,pkgs/HelixNavigator-1.0.0-windows-x64.msi/HelixNavigator-1.0.0.msi
+          artifacts: pkgs/HelixNavigator-${{ inputs.version }}-linux-x64.deb/helixnavigator_${{ inputs.version }}-1_amd64.deb,pkgs/HelixNavigator-${{ inputs.version }}-macOS-x64.dmg/HelixNavigator-${{ inputs.version }}.dmg,pkgs/HelixNavigator-${{ inputs.version }}-windows-x64.msi/HelixNavigator-${{ inputs.version }}.msi
           draft: true
           prerelease: true
